--- a/index.html
+++ b/index.html
@@ -1714,7 +1714,7 @@
             </p>
             <div class="cta-buttons">
                 <!-- 🔴 IMPORTANTE: Reemplaza con tu enlace de Discord o formulario de registro -->
-                <a href="https://discord.gg/TU_SERVIDOR" class="btn btn-primary" target="_blank"><span>🏐 ÚNETE AHORA</span></a>
+                <a href="https://discord.gg/e4Y9Mg6dNp" class="btn btn-primary" target="_blank"><span>🏐 ÚNETE AHORA</span></a>
                 <a href="#guide" class="btn btn-secondary"><span>📖 VER GUÍA</span></a>
             </div>
         </div>
@@ -1726,22 +1726,22 @@
             <div class="stats">
                 <div class="stat-card fade-in">
                     <div class="stat-icon">👥</div>
-                    <div class="stat-number">50+</div>
+                    <div class="stat-number">10+</div>
                     <div class="stat-label">Jugadores Activos</div>
                 </div>
                 <div class="stat-card fade-in">
                     <div class="stat-icon">🏆</div>
-                    <div class="stat-number">12</div>
+                    <div class="stat-number">4</div>
                     <div class="stat-label">Clubs Registrados</div>
                 </div>
                 <div class="stat-card fade-in">
                     <div class="stat-icon">⚡</div>
-                    <div class="stat-number">100+</div>
+                    <div class="stat-number">1+</div>
                     <div class="stat-label">Partidos Jugados</div>
                 </div>
                 <div class="stat-card fade-in">
                     <div class="stat-icon">🎮</div>
-                    <div class="stat-number">4</div>
+                    <div class="stat-number">3</div>
                     <div class="stat-label">Divisiones</div>
                 </div>
             </div>
