--- a/index.html
+++ b/index.html
@@ -1775,41 +1775,23 @@
 
                 <div class="guide-card fade-in">
                     <div class="guide-step">3</div>
-                    <div class="guide-title">Regístrate</div>
-                    <div class="guide-description">
-                        Completa el formulario de registro con tu información de Roblox, nivel de habilidad 
-                        y disponibilidad horaria para los partidos.
-                    </div>
-                </div>
-
-                <div class="guide-card fade-in">
-                    <div class="guide-step">4</div>
                     <div class="guide-title">Únete o Crea un Club</div>
                     <div class="guide-description">
-                        Puedes unirte a un club existente o crear tu propio equipo con amigos. 
+                        Puedes unirte a un club existente en reclutamiento o crear tu propio equipo con amigos abrirndo ticket. 
                         Cada club necesita mínimo 4 jugadores activos.
                     </div>
                 </div>
 
                 <div class="guide-card fade-in">
-                    <div class="guide-step">5</div>
-                    <div class="guide-title">Asignación de División</div>
-                    <div class="guide-description">
-                        Basado en tu nivel y el de tu club, serás asignado a una división. 
-                        Podrás ascender o descender según tu rendimiento.
-                    </div>
-                </div>
-
-                <div class="guide-card fade-in">
-                    <div class="guide-step">6</div>
+                    <div class="guide-step">4</div>
                     <div class="guide-title">¡A Competir!</div>
                     <div class="guide-description">
-                        Una vez asignado, revisa el calendario de partidos y prepárate para competir. 
+                        Una vez asignado, revisa el calendario de partidos, amistosos y prepárate para competir. 
                         ¡Demuestra tus habilidades en la cancha!
                     </div>
                 </div>
             </div>
-        </div>
+       </div>
     </section>
 
     <!-- Rules Section -->
