--- a/index.html
+++ b/index.html
@@ -2457,7 +2457,7 @@
             <div class="footer-section">
                 <h3>BLACKNOVA LEAGUE</h3>
                 <p style="color: var(--text-dim); line-height: 1.8;">
-                    La liga competitiva más prestigiosa de VolleyBall Legends en Roblox. 
+                    La liga competitiva más competitiva de VolleyBall Legends en Roblox. 
                     Compite, mejora y conviértete en una leyenda del voleibol.
                 </p>
             </div>
@@ -2479,7 +2479,7 @@
                 <ul>
                     <li><a href="#social">Redes Sociales</a></li>
                     <!-- 🔴 Reemplaza con tu Discord -->
-                    <li><a href="https://discord.gg/TU_SERVIDOR" target="_blank">Discord Oficial</a></li>
+                    <li><a href="https://discord.gg/e4Y9Mg6dNp" target="_blank">Discord Oficial</a></li>
                     <!-- 🔴 Reemplaza con tu YouTube -->
                     <li><a href="https://youtube.com/@TU_CANAL" target="_blank">Canal de YouTube</a></li>
                     <li><a href="#">Calendario de Eventos</a></li>
