--- a/index.html
+++ b/index.html
@@ -2207,7 +2207,7 @@
                 <!-- División Elite -->
                 <div class="division-card fade-in">
                     <div class="division-header">
-                        <div class="division-name">DIVISIÓN ELITE</div>
+                        <div class="division-name">DIVISIÓN DIAMANTE</div>
                         <div class="division-tier">TIER 1</div>
                     </div>
                     <div class="standings-table">
@@ -2223,38 +2223,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td class="position">1</td>
-                                    <td class="team-name-table">⚡ Thunder Spikers</td>
-                                    <td>24</td>
-                                    <td>18</td>
-                                    <td>6</td>
-                                    <td style="color: var(--magenta); font-weight: 700;">54</td>
-                                </tr>
-                                <tr>
-                                    <td class="position">2</td>
-                                    <td class="team-name-table">⭐ Nova Stars</td>
-                                    <td>22</td>
-                                    <td>16</td>
-                                    <td>6</td>
-                                    <td style="color: var(--magenta); font-weight: 700;">48</td>
-                                </tr>
-                                <tr>
-                                    <td class="position">3</td>
-                                    <td class="team-name-table">🔥 Phoenix Rising</td>
-                                    <td>20</td>
-                                    <td>14</td>
-                                    <td>6</td>
-                                    <td style="color: var(--magenta); font-weight: 700;">42</td>
-                                </tr>
-                                <tr>
-                                    <td class="position">4</td>
-                                    <td class="team-name-table">🌟 Cosmic Hitters</td>
-                                    <td>20</td>
-                                    <td>12</td>
-                                    <td>8</td>
-                                    <td style="color: var(--magenta); font-weight: 700;">36</td>
-                                </tr>
+                                
                             </tbody>
                         </table>
                     </div>
@@ -2263,7 +2232,7 @@
                 <!-- División Pro -->
                 <div class="division-card fade-in">
                     <div class="division-header">
-                        <div class="division-name">DIVISIÓN PRO</div>
+                        <div class="division-name">DIVISIÓN PLATA</div>
                         <div class="division-tier" style="background: #c0c0c0;">TIER 2</div>
                     </div>
                     <div class="standings-table">
@@ -2279,38 +2248,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td class="position">1</td>
-                                    <td class="team-name-table">💎 Cyber Aces</td>
-                                    <td>18</td>
-                                    <td>13</td>
-                                    <td>5</td>
-                                    <td style="color: var(--magenta); font-weight: 700;">39</td>
-                                </tr>
-                                <tr>
-                                    <td class="position">2</td>
-                                    <td class="team-name-table">⚔️ Storm Crushers</td>
-                                    <td>16</td>
-                                    <td>11</td>
-                                    <td>5</td>
-                                    <td style="color: var(--magenta); font-weight: 700;">33</td>
-                                </tr>
-                                <tr>
-                                    <td class="position">3</td>
-                                    <td class="team-name-table">🎯 Precision Squad</td>
-                                    <td>16</td>
-                                    <td>10</td>
-                                    <td>6</td>
-                                    <td style="color: var(--magenta); font-weight: 700;">30</td>
-                                </tr>
-                                <tr>
-                                    <td class="position">4</td>
-                                    <td class="team-name-table">🚀 Rocket Serve</td>
-                                    <td>14</td>
-                                    <td>8</td>
-                                    <td>6</td>
-                                    <td style="color: var(--magenta); font-weight: 700;">24</td>
-                                </tr>
+                                
                             </tbody>
                         </table>
                     </div>
@@ -2319,7 +2257,7 @@
                 <!-- División Amateur -->
                 <div class="division-card fade-in">
                     <div class="division-header">
-                        <div class="division-name">DIVISIÓN AMATEUR</div>
+                        <div class="division-name">DIVISIÓN COBRE</div>
                         <div class="division-tier" style="background: #cd7f32;">TIER 3</div>
                     </div>
                     <div class="standings-table">
@@ -2337,7 +2275,7 @@
                             <tbody>
                                 <tr>
                                     <td class="position">1</td>
-                                    <td class="team-name-table">🌊 Volt Blockers</td>
+                                    <td class="team-name-table">🤜🤛 BESTO FRIENDS</td>
                                     <td>15</td>
                                     <td>9</td>
                                     <td>6</td>
@@ -2345,27 +2283,11 @@
                                 </tr>
                                 <tr>
                                     <td class="position">2</td>
-                                    <td class="team-name-table">🎮 Game Changers</td>
+                                    <td class="team-name-table">⚡ THUNDER HORIZON</td>
                                     <td>14</td>
                                     <td>8</td>
                                     <td>6</td>
                                     <td style="color: var(--magenta); font-weight: 700;">24</td>
-                                </tr>
-                                <tr>
-                                    <td class="position">3</td>
-                                    <td class="team-name-table">🌪️ Tornado Setters</td>
-                                    <td>12</td>
-                                    <td>7</td>
-                                    <td>5</td>
-                                    <td style="color: var(--magenta); font-weight: 700;">21</td>
-                                </tr>
-                                <tr>
-                                    <td class="position">4</td>
-                                    <td class="team-name-table">💫 Rising Stars</td>
-                                    <td>12</td>
-                                    <td>5</td>
-                                    <td>7</td>
-                                    <td style="color: var(--magenta); font-weight: 700;">15</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -2390,7 +2312,7 @@
                         Únete al servidor oficial. Anuncios, partidos y comunidad activa 24/7
                     </p>
                     <!-- 🔴 IMPORTANTE: Reemplaza con tu Discord -->
-                    <a href="https://discord.gg/TU_SERVIDOR" class="social-btn" target="_blank">Unirse</a>
+                    <a href="https://discord.gg/e4Y9Mg6dNp" class="social-btn" target="_blank">Unirse</a>
                 </div>
 
                 <div class="social-card fade-in">
@@ -2445,7 +2367,7 @@
                         Únete al juego de Roblox donde se llevan a cabo todos los partidos
                     </p>
                     <!-- 🔴 IMPORTANTE: Reemplaza con el enlace del juego -->
-                    <a href="https://www.roblox.com/games/TU_GAME_ID" class="social-btn" target="_blank">Jugar</a>
+                    <a href="https://www.roblox.com/games/73956553001240" class="social-btn" target="_blank">Jugar</a>
                 </div>
             </div>
         </div>
