--- a/index.html
+++ b/index.html
@@ -2036,160 +2036,55 @@
         <div class="container">
             <h2 class="section-title">🏆 CLUBS</h2>
             <p class="section-subtitle">Equipos competitivos registrados en BlackNova League</p>
-            
-            <div class="clubs-grid">
+
+                <div class="club-card fade-in">
+                    <div class="club-header">
+                        <div class="club-logo"> 🤜🤛</div>
+                        <div class="club-name">Besto Friends</div>
+                        <div class="club-division">División Pro</div>
+                    </div>
+                    <div class="club-stats">
+                        <div class="club-stat">
+                            <span class="club-stat-label">Partidos Jugados</span>
+                            <span class="club-stat-value">1</span>
+                        </div>
+                        <div class="club-stat">
+                            <span class="club-stat-label">Victorias</span>
+                            <span class="club-stat-value">1</span>
+                        </div>
+                        <div class="club-stat">
+                            <span class="club-stat-label">Derrotas</span>
+                            <span class="club-stat-value">0</span>
+                        </div>
+                        <div class="club-stat">
+                            <span class="club-stat-label">Winrate</span>
+                            <span class="club-stat-value">100%</span>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="club-card fade-in">
                     <div class="club-header">
                         <div class="club-logo">⚡</div>
-                        <div class="club-name">Thunder Spikers</div>
-                        <div class="club-division">División Elite</div>
-                    </div>
-                    <div class="club-stats">
-                        <div class="club-stat">
-                            <span class="club-stat-label">Partidos Jugados</span>
-                            <span class="club-stat-value">24</span>
-                        </div>
-                        <div class="club-stat">
-                            <span class="club-stat-label">Victorias</span>
-                            <span class="club-stat-value">18</span>
-                        </div>
-                        <div class="club-stat">
-                            <span class="club-stat-label">Derrotas</span>
-                            <span class="club-stat-value">6</span>
-                        </div>
-                        <div class="club-stat">
-                            <span class="club-stat-label">Winrate</span>
-                            <span class="club-stat-value">75%</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="club-card fade-in">
-                    <div class="club-header">
-                        <div class="club-logo">⭐</div>
-                        <div class="club-name">Nova Stars</div>
-                        <div class="club-division">División Elite</div>
-                    </div>
-                    <div class="club-stats">
-                        <div class="club-stat">
-                            <span class="club-stat-label">Partidos Jugados</span>
-                            <span class="club-stat-value">22</span>
-                        </div>
-                        <div class="club-stat">
-                            <span class="club-stat-label">Victorias</span>
-                            <span class="club-stat-value">16</span>
-                        </div>
-                        <div class="club-stat">
-                            <span class="club-stat-label">Derrotas</span>
-                            <span class="club-stat-value">6</span>
-                        </div>
-                        <div class="club-stat">
-                            <span class="club-stat-label">Winrate</span>
-                            <span class="club-stat-value">73%</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="club-card fade-in">
-                    <div class="club-header">
-                        <div class="club-logo">🔥</div>
-                        <div class="club-name">Phoenix Rising</div>
-                        <div class="club-division">División Elite</div>
-                    </div>
-                    <div class="club-stats">
-                        <div class="club-stat">
-                            <span class="club-stat-label">Partidos Jugados</span>
-                            <span class="club-stat-value">20</span>
-                        </div>
-                        <div class="club-stat">
-                            <span class="club-stat-label">Victorias</span>
-                            <span class="club-stat-value">14</span>
-                        </div>
-                        <div class="club-stat">
-                            <span class="club-stat-label">Derrotas</span>
-                            <span class="club-stat-value">6</span>
-                        </div>
-                        <div class="club-stat">
-                            <span class="club-stat-label">Winrate</span>
-                            <span class="club-stat-value">70%</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="club-card fade-in">
-                    <div class="club-header">
-                        <div class="club-logo">💎</div>
-                        <div class="club-name">Cyber Aces</div>
-                        <div class="club-division">División Pro</div>
-                    </div>
-                    <div class="club-stats">
-                        <div class="club-stat">
-                            <span class="club-stat-label">Partidos Jugados</span>
-                            <span class="club-stat-value">18</span>
-                        </div>
-                        <div class="club-stat">
-                            <span class="club-stat-label">Victorias</span>
-                            <span class="club-stat-value">13</span>
-                        </div>
-                        <div class="club-stat">
-                            <span class="club-stat-label">Derrotas</span>
-                            <span class="club-stat-value">5</span>
-                        </div>
-                        <div class="club-stat">
-                            <span class="club-stat-label">Winrate</span>
-                            <span class="club-stat-value">72%</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="club-card fade-in">
-                    <div class="club-header">
-                        <div class="club-logo">⚔️</div>
-                        <div class="club-name">Storm Crushers</div>
-                        <div class="club-division">División Pro</div>
-                    </div>
-                    <div class="club-stats">
-                        <div class="club-stat">
-                            <span class="club-stat-label">Partidos Jugados</span>
-                            <span class="club-stat-value">16</span>
-                        </div>
-                        <div class="club-stat">
-                            <span class="club-stat-label">Victorias</span>
-                            <span class="club-stat-value">11</span>
-                        </div>
-                        <div class="club-stat">
-                            <span class="club-stat-label">Derrotas</span>
-                            <span class="club-stat-value">5</span>
-                        </div>
-                        <div class="club-stat">
-                            <span class="club-stat-label">Winrate</span>
-                            <span class="club-stat-value">69%</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="club-card fade-in">
-                    <div class="club-header">
-                        <div class="club-logo">🌊</div>
-                        <div class="club-name">Volt Blockers</div>
+                        <div class="club-name">Thunder Horizon</div>
                         <div class="club-division">División Amateur</div>
                     </div>
                     <div class="club-stats">
                         <div class="club-stat">
                             <span class="club-stat-label">Partidos Jugados</span>
-                            <span class="club-stat-value">15</span>
+                            <span class="club-stat-value">1</span>
                         </div>
                         <div class="club-stat">
                             <span class="club-stat-label">Victorias</span>
-                            <span class="club-stat-value">9</span>
+                            <span class="club-stat-value">0</span>
                         </div>
                         <div class="club-stat">
                             <span class="club-stat-label">Derrotas</span>
-                            <span class="club-stat-value">6</span>
+                            <span class="club-stat-value">1</span>
                         </div>
                         <div class="club-stat">
                             <span class="club-stat-label">Winrate</span>
-                            <span class="club-stat-value">60%</span>
+                            <span class="club-stat-value">0%</span>
                         </div>
                     </div>
                 </div>
