--- a/index.html
+++ b/index.html
@@ -1915,50 +1915,14 @@
             <div class="announcements-grid">
                 <div class="announcement-card fade-in">
                     <div class="announcement-header">
-                        <span class="announcement-date">13 Feb 2026</span>
-                        <h3 class="announcement-title">🎉 Inicio de Temporada 2</h3>
-                    </div>
-                    <div class="announcement-body">
-                        ¡La Temporada 2 de BlackNova League comienza oficialmente el 20 de febrero! 
-                        Nuevas divisiones, premios mejorados y más equipos compitiendo. ¡Registra tu club ahora!
-                    </div>
-                </div>
-
-                <div class="announcement-card fade-in">
-                    <div class="announcement-header">
-                        <span class="announcement-date">10 Feb 2026</span>
-                        <h3 class="announcement-title">🏆 Campeones Temporada 1</h3>
-                    </div>
-                    <div class="announcement-body">
-                        Felicitaciones a "Thunder Spikers" por ganar la Temporada 1 de BlackNova League. 
-                        Increíble desempeño en la final contra "Nova Stars". ¡Vean el resumen en nuestro YouTube!
-                    </div>
-                </div>
-
-                <div class="announcement-card fade-in">
-                    <div class="announcement-header">
-                        <span class="announcement-date">5 Feb 2026</span>
-                        <h3 class="announcement-title">⚡ Nuevas Reglas Implementadas</h3>
-                    </div>
-                    <div class="announcement-body">
-                        Hemos actualizado las reglas de la liga basados en feedback de los jugadores. 
-                        Revisen la sección de reglas para ver los cambios en sustituciones y tiempo de partidos.
-                    </div>
-                </div>
-
-                <div class="announcement-card fade-in">
-                    <div class="announcement-header">
                         <span class="announcement-date">1 Feb 2026</span>
-                        <h3 class="announcement-title">💎 Sistema de Premios</h3>
+                        <h3 class="announcement-title">🎉 Creacion de la Liga</h3>
                     </div>
                     <div class="announcement-body">
-                        Anunciamos el nuevo sistema de premios: Robux para los 3 primeros lugares, 
-                        skins exclusivos para todos los participantes y trofeos digitales para campeones de división.
+                        ¡Este dia fue la creacion de BlackNova League! 
+                        3 divisiones nuevas, 4 clubs iniciales y más. ¡Crea o unete a un club ahora!
                     </div>
                 </div>
-            </div>
-        </div>
-    </section>
 
     <!-- Matches Section -->
     <section id="matches">
